--- a/src/App.scss
+++ b/src/App.scss
@@ -8,7 +8,7 @@
     min-height: 100vh;
     margin: 0 auto;
     @include mobile {
-        padding: 0 $spacing-300;
+        padding: 88px $spacing-300;
     }
     @include tablet {
         padding: 0 114px;
