--- a/src/components/IntroComponent/_intro-component.scss
+++ b/src/components/IntroComponent/_intro-component.scss
@@ -3,11 +3,11 @@
 @import '../../styles/base/typography';
 
 .intro-component {
-    border: 1px solid black;
     display: flex;
     flex-direction: column;
     gap: $spacing-800;
-    min-height: 70vh;
+    min-height: fit-content;
+    max-width: 1113px;
     // padding: 0 $spacing-300;
 
     @include desktop {
@@ -24,7 +24,6 @@
         display: flex;
         flex-direction: column;
         gap: $spacing-200;
-        border: 1px solid red;
 
         @include desktop {
             flex-basis: 50%;
