--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -56,6 +56,7 @@
 }
 @mixin text-preset-5-medium-italic {
     font-family: 'Poppins', italic;
+    font-style: italic;
     font-weight: 500;
     font-size: 11px;
     line-height: 1.55;
